--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -69,6 +69,23 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/hifreq_text"
         android:layout_marginTop="8dp" />
+     
+    <TextView
+        android:id="@+id/shift_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hi_freq_seek"
+        android:layout_centerHorizontal="true" 
+        android:textStyle="bold"
+        android:text="@string/shift_text" />     
+     <SeekBar
+        android:id="@+id/shift_seek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/shift_text"
+        android:layout_marginTop="8dp" />
     
     <View 
         android:id="@+id/hr2"
@@ -76,7 +93,7 @@
         android:layout_marginBottom="8dp"
         android:layout_height="1px" 
         android:layout_width="fill_parent" 
-        android:layout_below="@+id/hi_freq_seek"
+        android:layout_below="@+id/shift_seek"
         android:background="#000000"/> 
     <TextView
         android:id="@+id/visualiser_title"
