refining classes, still debugging pitch shifter

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,18 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/processing_title"
-        android:text="@string/threshold_gate" />
-    <TextView
-        android:id="@+id/pitch_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/gate_text" 
-        android:text="@string/pitch_hertz" />  
+        android:text="@string/threshold_gate" /> 
      <TextView
         android:id="@+id/hifreq_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pitch_text"
+        android:layout_below="@+id/gate_text"
         android:layout_centerHorizontal="true" 
         android:textStyle="bold"
         android:text="@string/hifreq_text" />     
@@ -86,14 +80,31 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/shift_text"
         android:layout_marginTop="8dp" />
-    
+ 
+    <TextView
+        android:id="@+id/gain_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/shift_seek"
+        android:layout_centerHorizontal="true" 
+        android:textStyle="bold"
+        android:text="@string/gain_text" />     
+     <SeekBar
+        android:id="@+id/gain_seek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/gain_text"
+        android:layout_marginTop="8dp" />     
+     
     <View 
         android:id="@+id/hr2"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
         android:layout_height="1px" 
         android:layout_width="fill_parent" 
-        android:layout_below="@+id/shift_seek"
+        android:layout_below="@+id/gain_seek"
         android:background="#000000"/> 
     <TextView
         android:id="@+id/visualiser_title"
