--- a/res/xml/device_filter.xml
+++ b/res/xml/device_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <usb-device vendor-id="1234" product-id="5678" class="255" subclass="66" protocol="1" />
+    <usb-device vendor-id="6975" device-id="1002" product-id="8199" class="0" subclass="0" protocol="0" />
 </resources>
